--- a/beunitn-example.tex
+++ b/beunitn-example.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \title{There Is No Largest Prime Number}
-\date[ISPN ’80]{27th International Symposium of Prime Numbers}
+\date{27th November 2021}
 \author[Euclid]{Euclid of Alexandria \texttt{euclid@alexandria.edu}}
 
 \usetheme{beunitn}
