--- a/beamercolorthemebeunitn.sty
+++ b/beamercolorthemebeunitn.sty
@@ -10,5 +10,17 @@
 \setbeamercolor*{author}{fg=black}
 \setbeamercolor*{date}{fg=black}
 
+
+\setbeamercolor{palette primary}{fg=dark-math}
+\setbeamercolor{palette secondary}{fg=black}
+\setbeamercolor{palette tertiary}{fg=light-math}
+\setbeamercolor{palette quaternary}{fg=black}
+\setbeamercolor{structure}{fg=dark-math} % itemize, enumerate, etc
+\setbeamercolor{section in toc}{fg=light-math} % TOC sections
+
+% Override palette coloring with secondary
+\setbeamercolor{subsection in head/foot}{fg=black}
+
+
 \mode
 <all>
