--- a/beamercolorthemebeunitn.sty
+++ b/beamercolorthemebeunitn.sty
@@ -21,6 +21,9 @@
 % Override palette coloring with secondary
 \setbeamercolor{subsection in head/foot}{fg=black}
 
+% Items
+\setbeamertemplate{items}[square]
+\setbeamertemplate{sections/subsections in toc}[square]
 
 \mode
 <all>
