tests half way good

--- a/beamerthemebeunitn.sty
+++ b/beamerthemebeunitn.sty
@@ -5,9 +5,15 @@
 \RequirePackage{tikz}
 
 % Settings
-\useinnertheme{beunitn}
-\useoutertheme{beunitn}
-\usecolortheme{beunitn}
+
+%Soluzione temporanea per i test
+\usepackage{../../beamerinnerthemebeunitn}
+\usepackage{../../beamerouterthemebeunitn}
+\usepackage{../../beamercolorthemebeunitn}
+
+%\useinnertheme{beunitn}
+%\useoutertheme{beunitn}
+%\usecolortheme{beunitn}
 
 \setbeamertemplate{navigation symbols}{}
 \setbeamertemplate{blocks}[rounded][shadow=true]
