--- a/tests/test2_(longer)/example2.tex
+++ b/tests/test2_(longer)/example2.tex
@@ -3,8 +3,8 @@
 \usepackage{lipsum}
 \usepackage{todonotes}
 
-%todo: ovviamente, questo andrà cambiato.
-\usetheme{beunitn}
+%todo: ovviamente, questo andrà cambiato
+\usepackage{../../beamerthemebeunitn}
 
 
 \usepackage[italian]{babel}
@@ -79,6 +79,11 @@
     \begin{alertblock}{Una frase profonda e filosofica}
         \lipsum[66]
     \end{alertblock}
+    \beamerskipbutton{Bottone finto}
+\end{frame}
+
+\begin{frame}
+	\tableofcontents
 \end{frame}
 
 \end{document}
