bibliography and fix of images

--- a/beamerthemebeunitn.sty
+++ b/beamerthemebeunitn.sty
@@ -7,13 +7,14 @@
 % Settings
 
 %Soluzione temporanea per i test
-\usepackage{../../beamerinnerthemebeunitn}
-\usepackage{../../beamerouterthemebeunitn}
-\usepackage{../../beamercolorthemebeunitn}
-
-%\useinnertheme{beunitn}
-%\useoutertheme{beunitn}
-%\usecolortheme{beunitn}
+%\usepackage{../../beamerinnerthemebeunitn}
+%\usepackage{../../beamerouterthemebeunitn}
+%\usepackage{../../beamercolorthemebeunitn}
+%%%
+\useinnertheme{beunitn}
+\useoutertheme{beunitn}
+\usecolortheme{beunitn}
+%\graphicspath{{./images/}}
 
 \setbeamertemplate{navigation symbols}{}
 \setbeamertemplate{blocks}[rounded][shadow=true]
