--- a/beamerinnerthemebeunitn.sty
+++ b/beamerinnerthemebeunitn.sty
@@ -1,6 +1,6 @@
 \mode<presentation>
 
-\graphicspath{{./images/}}
+
 
 \setbeamertemplate{background}{
   \begin{tikzpicture}
@@ -9,7 +9,7 @@
   \fill[color=light-math ] (0,9.1) to[out = 0 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  -- (0,\the\paperheight) ;
   
   \node[inner sep=0pt] (logo) at (11.9,8.8)
-      {\includegraphics[width=1.5cm]{logo.png}};
+      {\includegraphics[width=1.5cm]{images/logo.png}};
   \end{tikzpicture}
 }
 
@@ -56,7 +56,7 @@
   \fill[color=dark-math ] (0,4.9) rectangle (\the\paperwidth,4.5) ;
   
   \node[inner sep=0pt] (logo) at (6.4,7)
-      {\includegraphics[width=1.5cm]{logo.png}};
+      {\includegraphics[width=1.5cm]{images/logo.png}};
   \end{tikzpicture}
 }
 \frame{\sectionpage}
