--- a/tests/test2_(longer)/example2.tex
+++ b/tests/test2_(longer)/example2.tex
@@ -112,7 +112,7 @@
 	\printbibliography[heading=none]
 \end{frame}
 
-\begin{frame}
+\begin{frame}{Table of contents}
 	\tableofcontents
 \end{frame}
 
