--- a/beamerouterthemebeunitn.sty
+++ b/beamerouterthemebeunitn.sty
@@ -8,7 +8,7 @@
   \begin{tikzpicture}
   \useasboundingbox[](0,0) rectangle(\the\paperwidth,1.2);
    \ifx\insertframesubtitle\@empty%
-      {\node[anchor=west, dark-math,font=\textbf\large] at (1.2,0.61){\insertframetitle};}
+      {\node[anchor=west, dark-math,font=\textbf\large] at (0.2,0.61){\insertframetitle};}
       \else%
       {\node[anchor= west, black,font=\large] at (1.2,0.81){\insertframetitle};%
        \node[anchor= west, black,font=\small] at (1.2,0.41){\insertframesubtitle};}%
@@ -18,3 +18,13 @@
 }
 %\useoutertheme[ right/left , height=2]{sidebar} %todo: sistemare
 \mode<all>
+
+\setbeamertemplate{frametitle}
+{
+    \nointerlineskip
+    \begin{beamercolorbox}[sep=0.3cm,ht=1.8em,wd=\paperwidth]{frametitle}
+        \vbox{}\vskip-2ex%
+        \strut\insertframetitle\strut
+        \vskip-0.8ex%
+    \end{beamercolorbox}
+}
