--- a/beamercolorthemebeunitn.sty
+++ b/beamercolorthemebeunitn.sty
@@ -9,6 +9,7 @@
 \setbeamercolor*{title page header}{fg=dark-math}
 \setbeamercolor*{author}{fg=black}
 \setbeamercolor*{date}{fg=black}
+\setbeamercolor{frametitle}{fg=white}
 
 
 \setbeamercolor{palette primary}{fg=dark-math}
