Progress bar e logo

--- a/beamercolorthemebeunitn.sty
+++ b/beamercolorthemebeunitn.sty
@@ -3,6 +3,7 @@
 %Color
 \definecolor{dark-math}{RGB}{80,99,39}
 \definecolor{light-math}{RGB}{120,145,61}
+\definecolor{light-gray}{RGB}{220,224,212}
 
 
 % Settings
