--- a/tests/test2_(longer)/example2.tex
+++ b/tests/test2_(longer)/example2.tex
@@ -48,7 +48,7 @@
   \tableofcontents
 \end{frame}
 
-\section{Titolo sezione}
+\section{Titolo sezione numero 1}
 
 \begin{frame}{Questo è un frame}
     \begin{block}{Un blocco di testo importante}
@@ -108,6 +108,7 @@
 	\fullcite{SIN}
 \end{frame}
 
+\section{Sezione finale}
 
 \begin{frame}{Bibliografia}
 	\printbibliography[heading=none]
