--- a/tests/test2_(longer)/example2.tex
+++ b/tests/test2_(longer)/example2.tex
@@ -32,7 +32,7 @@
 \addbibresource{biblio.bib}
 
 \title{Un breve test}
-\subtitle{esempio di applicazione del template}
+\subtitle{esempio di applicazione del template, adesso allungo il titolo per vedere come viene}
 \author{autori vari}
 \institute{Università di Trento}
 \date{30 febbraio 2042}
@@ -40,7 +40,7 @@
 \begin{document}
 % c'è un overfull hbox, ma tanto è solo un dummy test
 
-\begin{frame}
+\begin{frame}[fragile]
   \titlepage
 \end{frame}
 
