block with better colors

--- a/beamercolorthemebeunitn.sty
+++ b/beamercolorthemebeunitn.sty
@@ -27,5 +27,8 @@
 \setbeamertemplate{items}[square]
 \setbeamertemplate{sections/subsections in toc}[square]
 
+
+\usepackage{beamercolorthemerose}
+
 \mode
 <all>
