--- a/tests/test2_(longer)/example2.tex
+++ b/tests/test2_(longer)/example2.tex
@@ -96,10 +96,20 @@
 \end{frame}
 
 \begin{frame}{Conclusione}
+    Iniziamo con un alertblock per attirare l'attenzione \dots
     \begin{alertblock}{Una frase profonda e filosofica}
         \lipsum[66]
     \end{alertblock}
     \beamerskipbutton{Bottone finto}
+\end{frame}
+\begin{frame}{}
+    \dots
+    ed ora un exampleblock per finire in bellezza:
+    \begin{exampleblock}{Problemi di sonno?}
+        "Chi ben mangia, dorme la sera." 
+        \flushright
+        (Orazio, forse)
+    \end{exampleblock}
 \end{frame}
 
 \begin{frame}
