--- a/beamerinnerthemebeunitn.sty
+++ b/beamerinnerthemebeunitn.sty
@@ -32,12 +32,14 @@
   \useasboundingbox (0,0) rectangle(\the\paperwidth,\the\paperheight);
 	\ifx\insertframetitle\@empty%
 		  	{
-		  	\fill[color=light-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,7.7)  to[out = 170 , in = 290 ] (10.1,\the\paperheight) ;
+		  	\fill[color=dark-math ] (10.3,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,7.63)  to[out = 170 , in = 290 ] (10.02,\the\paperheight) ;
+		  	\fill[color=light-math ] (10.6,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.9) -- (\the\paperwidth,7.69)  to[out = 170 , in = 290 ] (10.1,\the\paperheight) ;
 		  	\fill[color=dark-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  ;
+		  	
 		  	}
 	 \else
 	  { \fill[color=dark-math] (0,8.65) to[out = 0 , in = 170 ] (\the\paperwidth,7.6)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ;
-	  \fill[color=light-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,7.7)  to[out = 170 , in = 0 ] (0,8.8) -- (0 , \the\paperheight);
+	  \fill[color=light-math ] (10.6,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.9) -- (\the\paperwidth,7.7)  to[out = 170 , in = 0 ] (0,8.8) -- (0 , \the\paperheight);
 	   \fill[color=dark-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  ;
 	  }
   	\fi
@@ -67,15 +69,11 @@
       \par\noindent\rule{6cm}{0.4pt}
     \end{beamercolorbox}%
     
-    \vskip0.1cm%
+    \vskip0.3cm%
     \begin{beamercolorbox}[wd=12cm,leftskip=1cm,#1]{author}
       \usebeamerfont{author}\insertauthor%
     \end{beamercolorbox}
-     \vskip0.1cm
-     \begin{beamercolorbox}[wd=12cm,leftskip=1cm,#1]{date}
-           \usebeamerfont{author}\insertinstitute%
-     \end{beamercolorbox}
-     \vskip0.1cm%
+     \vskip0.2cm%
     \begin{beamercolorbox}[wd=12cm,leftskip=1cm,#1]{date}
       \usebeamerfont{author}\insertdate%
     \end{beamercolorbox}
@@ -129,6 +127,15 @@
 \begingroup
 \setbeamertemplate{background}{
   \begin{tikzpicture}
+  % curve sulla pag. di nuova sezione
+  {
+    % SOPRA
+      \fill[color=dark-math] (0,8.65) to[out = 0 , in = 170 ] (\the\paperwidth,7.6)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ;
+	  \fill[color=light-math ] (10.6,\the\paperheight) to (\the\paperwidth,\the\paperheight) -- (\the\paperwidth,7.7)  to[out = 170 , in = 0 ] (0,8.8) -- (0 , \the\paperheight);
+	  % SOTTO
+	  \fill[color=dark-math] (\the\paperwidth,1) to[out = 170 , in = 0] (0,2)--  (0,0) -- (\the\paperwidth,0) ;
+	  \fill[color=light-math] (\the\paperwidth,.9) to[out = 170 , in = 0] (0,1.85)--  (0,0) -- (\the\paperwidth,0) ;
+  }
   \useasboundingbox (0,0) rectangle(\the\paperwidth,\the\paperheight);
   \fill[color=light-math] (0,4.5) rectangle (\the\paperwidth,6) ;
   \fill[color=dark-math ] (0,4.9) rectangle (\the\paperwidth,4.5) ;
