Up to date with main

--- a/beamerinnerthemebeunitn.sty
+++ b/beamerinnerthemebeunitn.sty
@@ -69,11 +69,15 @@
       \par\noindent\rule{6cm}{0.4pt}
     \end{beamercolorbox}%
     
-    \vskip0.3cm%
+    \vskip0.1cm%
     \begin{beamercolorbox}[wd=12cm,leftskip=1cm,#1]{author}
       \usebeamerfont{author}\insertauthor%
     \end{beamercolorbox}
-     \vskip0.2cm%
+       \vskip0.1cm%
+    \begin{beamercolorbox}[wd=12cm,leftskip=1cm,#1]{date}
+       \usebeamerfont{author}\insertinstitute%
+    \end{beamercolorbox}
+    \vskip0.1cm%
     \begin{beamercolorbox}[wd=12cm,leftskip=1cm,#1]{date}
       \usebeamerfont{author}\insertdate%
     \end{beamercolorbox}
