--- a/beamerinnerthemebeunitn.sty
+++ b/beamerinnerthemebeunitn.sty
@@ -136,7 +136,7 @@
    \draw[color = light-gray , thick] (1,3.7) -- (11.8 , 3.7);
    \draw[color = dark-math, thick] (1,3.7) -- ({1+(\thepage)/(\insertdocumentendpage)*10.8} , 3.7);
   \node[inner sep=0pt] (images/logo.png) at (6.4,7)
-      {\includegraphics[width=1.5cm]{images/logo_new.png}};
+      {\includegraphics[width=1.5cm]{images/logo_math.png}};
   \end{tikzpicture}
 }
 \frame{\sectionpage}
