--- a/beamerinnerthemebeunitn.sty
+++ b/beamerinnerthemebeunitn.sty
@@ -32,12 +32,12 @@
   \useasboundingbox (0,0) rectangle(\the\paperwidth,\the\paperheight);
 	\ifx\insertframetitle\@empty%
 		  	{
-		  	\fill[color=light-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,7.7)  to[out = 170 , in = 290 ] (10.1,\the\paperheight) ;
+		  	\fill[color=light-math ] (10.6,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.9) -- (\the\paperwidth,7.7)  to[out = 170 , in = 290 ] (10.1,\the\paperheight) ;
 		  	\fill[color=dark-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  ;
 		  	}
 	 \else
 	  { \fill[color=dark-math] (0,8.65) to[out = 0 , in = 170 ] (\the\paperwidth,7.6)--  (\the\paperwidth,\the\paperheight) -- (0,\the\paperheight) ;
-	  \fill[color=light-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,7.7)  to[out = 170 , in = 0 ] (0,8.8) -- (0 , \the\paperheight);
+	  \fill[color=light-math ] (10.6,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.9) -- (\the\paperwidth,7.7)  to[out = 170 , in = 0 ] (0,8.8) -- (0 , \the\paperheight);
 	   \fill[color=dark-math ] (10.5,\the\paperheight) to[out = 290 , in = 170 ] (\the\paperwidth,7.8) -- (\the\paperwidth,\the\paperheight)  ;
 	  }
   	\fi
@@ -62,7 +62,7 @@
 { 
    \vskip3cm%
     \begin{beamercolorbox}[wd=12cm,leftskip=1cm,#1]{title page header}
-      \usebeamerfont{title}\inserttitle \par
+      \usebeamerfont{title}\textbf\inserttitle \par
       \usebeamerfont{subtitle} \insertsubtitle%
       \par\noindent\rule{6cm}{0.4pt}
     \end{beamercolorbox}%
