--- a/tests/test2_(longer)/example2.tex
+++ b/tests/test2_(longer)/example2.tex
@@ -40,7 +40,7 @@
 \begin{document}
 % c'è un overfull hbox, ma tanto è solo un dummy test
 
-\begin{frame}[fragile]
+\begin{frame}
   \titlepage
 \end{frame}
 
@@ -49,6 +49,23 @@
 \end{frame}
 
 \section{Titolo sezione numero 1}
+
+\begin{frame}
+	Proviamo l'\alert{alert}
+	\pause
+	\begin{alertblock}{Titolo}
+	Che blocco rosso
+	\end{alertblock}
+\end{frame}
+
+
+\begin{frame}{Example Block}
+	Ok proviamo un blocco:
+	\begin{exampleblock}{Una bella formula}
+		Questa è una bellissima formula:
+		\[ e^{\pi i} + 1 = 0\]
+	\end{exampleblock}
+\end{frame}
 
 \begin{frame}{Questo è un frame}
     \begin{block}{Un blocco di testo importante}
