--- a/beamerinnerthemebeunitn.sty
+++ b/beamerinnerthemebeunitn.sty
@@ -62,7 +62,7 @@
 { 
    \vskip3cm%
     \begin{beamercolorbox}[wd=12cm,leftskip=1cm,#1]{title page header}
-      \usebeamerfont{title}\inserttitle \par
+      \usebeamerfont{title}\textbf{\inserttitle} \par
       \usebeamerfont{subtitle} \insertsubtitle%
       \par\noindent\rule{6cm}{0.4pt}
     \end{beamercolorbox}%
